--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-  <h1 class="page-header">Redirecting...</h1>
-  <p class="lead">You're redirected to Klaus' official website - or <a href="//klausbadelt.com">click here</a> if not.</p>
+  <p>You're redirected to Klaus' official website - or <a href="//klausbadelt.com">click here</a> if not.</p>
 
   <script>
     window.location.replace('http://klausbadelt.com');
