--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>You're redirected to Klaus' official website - or <a href="//klausbadelt.com">click here</a> if not.</p>
 
   <script>
-    window.location.replace('http://klausbadelt.com');
+    window.location.replace('mailto:sales@filmhub.com');
   </script>
 </body>
 </html>
